Correct question letter spacing

--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -170,14 +170,18 @@ body
   position: relative
   z-index: 30
   top: -1197px
-  right: -477px
-  font-size: 11px
+  right: -450px
+  font:
+    size: 11px
+    weight: 100
+  letter-spacing: 1px
+
 
 #button
   position: relative
   z-index: 30
   top: -1197px
-  right: -507px
+  right: -478px
   width: 300px
   height: 100px
   background-color: #26d9a6
